--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,8 +2,15 @@ body {
   background-image: url("sugar_background.jpg");
 }
 
-.title {
+#title {
+  margin: 0;
+  padding: 0;
   font-family: 'Lobster Two', cursive;
+}
+
+#author {
+  margin: 0;
+  font-family: 'Lobster Two';
 }
 
 .logo {
