--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,85 +1,56 @@
 <html>
-<head>
-<title>Trina's Lil Cakes!</title>
-</head>
+  <head>
+    <title>Trina's Lil Cakes!</title>
+  </head>
 
-<body>
-  <div class="info">
-    <div class="logo">
-      <%= image_tag("logo.png", size: "120x120") %>
-      <h1 id="title">Trina's Lil' Cakes</h1>
-      <h6 id="author">by: Trina Nicolasin</h6>
-    </div>
-
-    <div class="tabs">
-      <ul class="tab-links">
-        <li class="active"><a href="#home">Home</a></li>
-        <li><a href="#menu">Menu</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-
-      <div class="tab-content">
-        <div id="home" class="tab active">
-          <div class="featured">
-            <div class="image">
-              <%= image_tag("sample.jpg", size: "305x230") %>
-            </div>
-          </div>
-          <h3 class="topic">Trina has been baking since she was a little girl at her Mom’s Restaurant/Bakery in the Philippines. They used to make little treats like chocolate lollipops, cupcakes, cookies and more! She decided to go to culinary school and graduated from Le Cordon Bleu Chicago in 2012. She has trained and worked under numerous well known Pastry Chefs such as Jing Palasigue who is a Master Sugar Artist and Chef Marylin McNabb at the Hilton Hotel in Northbrook. She has also consulted and created designs for The American Girl Doll Bakeshop. Eventually, she developed a strong enough client base to start her own baking business, Trina's Lil' Cakes or TLC. Since, she has made sweet treats for customers all around the Chicagoland area.</h3>
-        </div>
-
-        <div id="menu" class="tab">
-          <div class="featured">
-            <div class="image">
-              <%= image_tag("fishcake.jpg", size: "270x230") %>
-            </div>
-          </div>
-          <h1 class="topic">Menu</h1>
-            <h3 class="content-title">Regular Cupcakes per Dozen:</h3>
-            <h4 class="content">Plain with frosting: $30<br>Filling: $36<br>Filling & Topper: $45<br>***(5% off after 3+ dozen)<br><br></h4>
-            <h3 class="content-title">Mini Cupcakes per Dozen (minimum 2 dozen):</h3>
-            <h4 class="content">Plain with frosting: $9<br>Filling: $12<br>Filling & Topper: $18<br>***(5% off after 6+ dozen)<br>***(specialty cupcakes start at price listed - may change depending on size and complexity of topper)<br><br></h4>
-            <h3 class="content-title">Cake Pops:</h3>
-            <h4 class="content">$2 per pop<br>$22 per dozen<br>***(price may change per pop if they are specialty design)<br><br></h4>
-            <h3 class="content-title">Round Cakes:</h3>
-            <h4 class="content">6" start at $30<br>8" start at $45<br>10" start at $60<br>12" start at $85<br>***(base price listed may change depending on type of filling or number of layers)<br><br></h4>
-            <h3 class="content-title">Sheet Cakes:</h3>
-            <h4 class="content">1/4 starts at $40<br>1/2 starts at $80<br>Full starts at $120<br>***(base price listed may change depending on type of filling or number of layers)<br><br></h4>
-            <h3 class="content-title">Specialty Cakes:</h3>
-            <h4 class="content">Will be quoted depending on complexity of design and size of cake. Final price will be given after order has been placed. Fondant topper prices also depend on complexity and size of design.<br><br></h4>
-            <h3 class="content-title">Sweets & Treats:</h3>
-            <h4 class="content">Mini Turon: $25 for 100 (with langka: $50 for 100)<br>Merengue: $25 for 100<br>Double Chocolate Chip Cookies: mini 3 for $1, regular $2 per piece<br><br></h4>
-            <h3 class="content-title">Flavors:</h3>
-            <h4 class="content">Vanilla<br>Chocolate<br>Red Velvet<br>Mocha<br>Marble<br>Carrot<br>Banana<br>Frostings<br>Buttercream<br>Cream Cheese<br>Swiss Merengue<br>Filipino Merengue<br>Ganache<br>Fillings<br>Fresh Fruit (cakes)<br>Fresh Fruit Compote (reg cupcakes)<br>Ganache (dark,milk, & white chocolates)(+$1.00 per reg cupcakes)(+ $0.50 per mini cupcakes)<br><br></h4>
-
-        </div>
-
-        <div id="contact" class="tab">
-          <div class="featured">
-            <div class="image">
-              <%= image_tag("swimcake.jpg", size: "305x230") %>
-            </div>
-          </div>
-          <h2 class="topic">Email Me!</h2>
-<form id="email" action="MAILTO:dpasie2@gmail.com" method="post" enctype="text/plain">
-Name:<br>
-<input type="text" name="name" value="your name"><br><br>
-E-mail:<br>
-<input type="text" name="mail" value="your email"><br><br>
-Comment:<br>
-<textarea rows="5" cols="50" name="comment" form="email">Enter inquiry here!</textarea><br><br>
-<input type="submit" value="Send">
-<input type="reset" value="Reset">
-</form>
-
-</body>
-</html>
-        </div>
+  <body>
+    <div class="info">
+      <div class="logo">
+        <%= image_tag("logo.png", size: "120x120") %>
+        <h1 id="title">Trina's Lil' Cakes</h1>
+        <h6 id="author">by: Trina Nicolasin</h6>
       </div>
 
+      <div class="tabs">
+        <ul class="tab-links">
+          <li class="active"><a href="#home">Home</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+
+        <div class="tab-content">
+
+          <div id="home" class="tab active">
+            <div class="featured">
+              <div class="image">
+                <%= image_tag("sample.jpg", size: "305x230") %>
+              </div>
+            </div>
+            <%= render "bio" %>
+          </div>
+
+          <div id="menu" class="tab">
+              <div class="featured">
+                  <div class="image">
+                    <%= image_tag("fishcake.jpg", size: "270x230") %>
+                    <%= render "menu" %>
+                </div>
+              </div>
+          </div>
+
+          <div id="contact" class="tab">
+            <div class="featured">
+              <div class="image">
+                <%= image_tag("swimcake.jpg", size: "305x230") %>
+              </div>
+            </div>
+            <h2 class="topic">Email Me!</h2>
+            <%= link_to "Contact", contacts_path %>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 
 </html>
 
